Updated overview, add slimes guide draft, updated a bit of the blood rage guide

--- a/src/content/docs/drs/bloodrage.mdx
+++ b/src/content/docs/drs/bloodrage.mdx
@@ -27,7 +27,8 @@ Page Written by Valagnar Shade and O'palt Jhaid
 
 
 ## Blood Rage 101
-Lost blood rage is lost action obtained from “Forgotten Fragments of Cunning” which are only obtainable in the Dalriada after the first fight encounter. You need to be Resistance rank 25 to appraise and obtain the action yourself but you can get the action for use if you utilize Lost Mimic ignoring the resistance rank requirement.
+Lost Blood Rage is lost action obtained from “Forgotten Fragments of Cunning” which are only obtainable in the Dalriada after the first fight encounter. You need to be Resistance rank 25 to appraise and obtain the action yourself but you can get the action for use if you utilize Lost Mimic ignoring the resistance rank requirement.
+<br/><hr/>
 
 ### Why Blood Rage?
 Lost Blood Rage is a massive damage gain on Tanks and is the best damage lost action for them. Unlike Lost font of Power or Banner of Honored Sacrifice, Lost Blood Rage isn’t just a press n forget. Because Blood Rush “shortens recast times of abilities by 75%”, tanks no longer follow the “2 min burst meta”.
@@ -35,6 +36,7 @@ Lost Blood Rage is a massive damage gain on Tanks and is the best damage lost ac
 :::note[About Blood Rush's Cooldown Effect]
 Blood Rush only affects abilities. Weaponskills like PLD’s Goring Blade and GNB’s Gnashing Fang will not be reduced. This will likely change in Dawntrail.
 :::
+<br/><hr/>
 
 ### How To
 In order to gain the effects of Blood Rush, you must reach 4 stacks of blood rage. Using the blood rage action will already grant you one stack with a duration of 18 seconds. If you don’t use a gap closer 
@@ -49,6 +51,7 @@ Using a gap closer will refresh the duration of BR and increase the stacks. In o
 5. Wait until your dash is back
 6. Hit your dash (Maximum stacks)
 7. Blood Rush Achieved.
+<br/><hr/>
 
 ### Maximizing your Blood Rush Window
 In addition to reducing your own abilities, Blood Rush also affects other Lost Actions. So what’s the next best thing? **Lost Font of Power**. When used under the effects of Blood Rush, **Lost Font of Power’s** recast time is 30 seconds. 
@@ -58,8 +61,9 @@ you get into blood rush and hit it again when blood rush ends. Your burst window
 :::tip[Font and Blood Rage Placements]
 If you put blood rush on the left side duty action slot, a lot of people (including me) will be sad.
 :::
+<br/><hr/>
 
-### Job Specific Stuff
+### Job Specific Notes
 Now that we know the basic overview of blood rush, let's talk about how each specific tank can optimize its uses.
 
 #### PLD (this will likely change in Dawntrail)
@@ -81,11 +85,13 @@ Use Carve and Spit when it’s up. Salted Earth can be used twice under BR allow
 #### GNB (this will likely changing in Dawntrail)
 No Mercy is exactly the same as PLD’s FoF. Hold each usage in blood rush by 4 ish seconds to get an extra 10 ish seconds. Blasting Zone is exactly the same as WAR’s Upheaval. Sonic Break is the same as PLD’s Goring Blade. 
 Bow Shock is the same as DRK’s Carve and Spit. Just make sure to have the cartridge to keep Gnashing Fang on cooldown. Fill the rest of the BR window with Burst Strikes and 1-2-3 combos. Use Bloodfest under BR to ensure the maximum cartridge gain possible.
+<br/><hr/>
 
 #### Misc
 Should you need to slot Lost Aethershield for your party at Trinity Avowed and Queen, replace Lost Font of Power.
 
 Blood Rush affects all abilities, including Defensive actions like Rampart and Tank Invulns. Extra usages of such actions aren’t major on a tank using Indom Essence but are incredibly beneficial for advanced users running Irregular Essence.
+<br/><hr/>
 
 ### Post Opener Blood Rage Usage
 Because Blood Rage is a 3 min cooldown with 30 sec ramp up and another 30 sec of rush burst, there’s a 
@@ -109,7 +115,7 @@ it’s important to get as much as you can under BR. If the DRK player has a str
 - <a href="https://www.youtube.com/watch?v=LskfJWkP7QE&feature=youtu.be" target="_blank">Small Meme Video that Demonstrates the timing for building stacks and ability usage during Blood Rush by Valagnar Shade</a>
 <br/><hr/>
 
-#### Blood Rage Training Wheels Macro
+### Blood Rage Training Wheels Macro
 ```
 /micon "Duty Action I"
 /gaction "Duty Action I"
@@ -117,7 +123,12 @@ it’s important to get as much as you can under BR. If the DRK player has a str
 /echo "Use Dash" <se.7> <wait.15>
 /echo "Use Dash" <se.7> <wait.1>
 /echo "Burst!" <se.15>
+/wait 60
+/echo 60s have elapsed
+/wait 55
+/echo "Start saving dashes!" <se.11>
 ```
+<br/><hr/>
 
 ## Impetus Chaining
 :::danger[WARNING!!!!]
@@ -127,6 +138,7 @@ PLEASE GET YOUR PARTY/THE RAID LEAD’S PERMISSION OUTSIDE OF RECLEARS! THIS CAN
 ### Why Impetus Chain?
 Impetus chaining is not only very fun, it’s also a gain over BR + FoP *in fights with longer kill times*. When done correctly, you’ll be in Blood Rush (the cooldown reduction part of BR) for about ⅔ of the fight. While it isn’t as strong as single-fight dump strats like long BR chaining, 
 it’s a good way to spread out damage evenly throughout the instance. Did I mention it’s fun?
+<br/><hr/>
 
 ### What you'll need
 - Blood Rage + Impetus slotted
@@ -135,6 +147,7 @@ it’s a good way to spread out damage evenly throughout the instance. Did I men
 - Holsters
     - [Full Instance Impetus Chaining](/drs/holsters/meme/#impetus-chaining-tank)
     - [Aethershield Impetus Tank](/drs/holsters/meme/#impetus-chaining-aethershield-tank)
+<br/><hr/>
 
 ### How To
 1. Start combat by using Blood Rage -> Impetus -> gapcloser.
@@ -144,6 +157,7 @@ it’s a good way to spread out damage evenly throughout the instance. Did I men
 5. After 15 seconds, use Lost Impetus.
 6. At the end of your Blood Rush, use Lost Impetus again. Hold ALL cooldowns between BR windows, as you’ll be re-entering Blood Rush very quickly.
 7. Go back to step 3, re-entering Blood Rush with your gapcloser and using Blood Rage again.
+<br/><hr/>
 
 ### Important Notes
 - Make sure to wait out the Blood Rage buff to its max duration when using your gapcloser, as if you don’t your Blood Rage cooldown will drift by ~3 seconds per window.
@@ -151,15 +165,17 @@ it’s a good way to spread out damage evenly throughout the instance. Did I men
 - Lost Impetus can be replaced by a gapcloser every other window. You’ll need to do this during some mechanics where Impetus might send you into the deathwall (namely Quick Marches in TA)
 - Keep at least one charge of Blood Rage for the next fight. This may require you to stop using BR at the end of a pull with a really long killtime.
 - Make sure to plan out your usage during long downtime like TA swords and Queen Superchess.
+<br/><hr/>
 
 ### Example Video
 - <a href="https://www.youtube.com/watch?v=H90NFkxp308" target="_blank">Impetus Chaining Guide by Valagnar Shade</a>
+<br/><hr/>
 
 ### Infographics
 #### Impetus Chaining Graphic
 <Image
     src="/drs/blood_chain.png"
-    width="400"
+    width="800"
     height="100"
     decoding="async"
     loading="eager"
