--- a/src/content/docs/drs/guides/slimes.mdx
+++ b/src/content/docs/drs/guides/slimes.mdx
@@ -1,6 +1,6 @@
 ---
 title: Slimes
-description: Slimey bois
+description: The gulag of Delubrum
 ---
 
 import ActionIcon from '@components/ActionIcon.astro'
@@ -15,6 +15,73 @@ import Footer from "@components/Footer.astro";
 />
 <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.15.1/cdn/shoelace-autoloader.js"></script>
 
+Delubrum (Savage) starts with two puzzle encounters, Slimes and Golems. Both are detailed here, as it can't be guaranteed which side you'll do.
+
+For both encounters, no one should use Lost Actions unless specifically directed to. These encounters do not have a real damage check, so it's better to save those charges for the actual bosses.
+
+If you prefer a video please watch the <a href="https://www.youtube.com/watch?v=-VXCCxiwo1s&list=PLrrlka4IEnUrNCbXmTEd1Kyu0BkeCIq9p&index=3" target="_blank">Slimes Video Guide by VesperXIV</a>.
+<br/><hr/>
+
+### Guide
+
+The goal of slimes side is to activate or "light up" the four green pads in each of the four rooms. To "light up" a pad a large, or "fused", Viscous Clot must die ontop of the pad as it attempts to cast "Rupture". If done properly,
+a glowing ring will appear around the pad for ~10 seconds before shutting off. So slimes must be killed in a roughly the same timeframe else you will likely wipe. There are **three traps that will be hidden and must be precepted**, avoid entering rooms until they've been cleared with **Lost Perception** 
+and avoid the orange landmines and purple poison traps on the ground.
+
+**Tanks** grab green Clots from the hallway and bring them to their rooms when called. Most hosts follow a 3-2-1 pattern, with tanks grabbing 3 slimes and then 2. Making sure to keep the large green slime on the pad as best you can.
+
+**Healers** keep tanks alive and bring the last Viscous Clot to their room for their tank.
+
+**DPS** kill red Sanguine Clots in their assigned rooms. Or killing the Bozjan Soldiers that spawn at the North and South ends of the center hallway.
+<br/><hr/>
+
+#### Where to Stand
+<Image
+    src="/drs/maps/slime-stand-here.png"
+    width="550"
+    height="550"
+    decoding="async"
+    loading="eager"
+    alt="Queen Cheatsheet"
+    onclick="window.open('/drs/maps/slime-stand-here.png','_blank')"
+    style="cursor:pointer; display: block !important; margin-left: auto; margin-right: auto;"
+/>
+<p style="text-align:center; margin-top: 0;">(Click to expand in new window)</p>
+<br/><hr/>
+
+### Enemies
+- **Viscous Clots (Green Slimes)**
+  - Spawn 3 at a time, in the middle of the hallway, roughly every 12s
+  - Aggros based on sound. So walking near or attacking it will cause aggro to you.
+  - Can only fuse/merge with other nearby Green slimes. Once merged it recieve a stack of HP Boost and begin to move slower.
+  - Once a green slime has reached 5 stacks of "HP Boost" it will begin to cast "Rupture".
+  - "Rupture" is a ginormous AoE that can hit up to 70% of your HP and applies a stack of Twice Come Ruin. 
+- **Sanguine Clots (Red Slimes)**
+  - Spawn 1 at a time, in each room, roughly every 22s (if able).
+  - Tethers + Agro's to the first person to hit it
+  - Must be killed on sight or risk them running out of control.
+  - Can fuse/merge with any other color of slime to gain stacks of HP and damage up. Fused red slimes also move slightly faster than the player. 
+    - If a red slime fuses, attempt to kite it. The larger the red slime, the deadlier it is. Big enough red slimes can one shot even tanks.
+  - Periodically will regenerate back to 100% HP.
+- **Bozja Soliders**
+  - Spawns 2 at a time, at north and south door-pads, roughly every 50s, with the first starting 20s after door opens
+  - Can occasionally cast **Hellish Slash** which is a large point-blank AoE pushing anything hit by it back and giving players a Thrice Come Ruin.
+    - This knockback will also interrupt the "Rupture" cast from Green slimes.
+  - Soliders can be stunned, bound, and heavied, but not slept or interrupted.
+<br/><hr/>
+
+### Lowman Guide
+**Tanks** will generally have the same role as in 48 person runs. Grab the green Viscous Clots from the hallway and drag them into your rooms when called. Again following the 3-2-1 pattern, with tanks grabbing 3 slimes and then 2. Tanks will also need to grab their final, sixth, slime from the center too.
+  This will be done in sync with the other tanks on a countdown so be prepared to run out, grab a slime, and run back to get them both on the pad.
+
+**Healers** will generally bring **Lost Burst** as an supporting action to help control Sanguine Clots. **Lost Burst** has the ability to interrupt any and all casts from the red slimes that spawn.
+
+**DPS** will grab the red slimes from the rooms and drag them towards the healers positioned at the North and South ends of the hallway. Making sure to kill them and letting them be interrupted by the healer using **Burst**.
+  - Occasionally a **DPS** will need to act as a fake green slime tank. For this, please ensure you have a pure essence, shell 2, and incense slotted in one of your two action slots. Make sure to bring an action to slot over incense once done!
+    The general idea is the same as Tanks. Use incense to grab green slimes from the center hallway when called
+<br/><hr/>
+
+### Pocket Guide
 <Image
     src="/drs/guides/slimes.png"
     width="700"
