--- a/src/content/docs/drs/overview.mdx
+++ b/src/content/docs/drs/overview.mdx
@@ -22,14 +22,68 @@ Inside you will face off against 4 enraging bosses with some simpler fights betw
 
 You will be expected to be using Lost Actions and Pure Essences as they are vital to clearing
 the raid. Not bringing the proper actions, essences, and reraisers will often result in you being removed from the current run.
-<br/><hr/>
 
-Please refer to the sidebar on the left for everything you need to know to be prepared for a full run of Delubrum Reginae (Savage).
 :::note[Reccomended Studying]
 If you are short on time, these pages contain the most important information to read and understand.
 - <a href="/drs/actions">Lost Action Basics</a>
 - Holster for your choice of role(s).
+  - [Melee](/drs/holsters/melee)
+  - [Physical Ranged](/drs/holsters/phys)
+  - [Caster](/drs/holsters/caster)
+  - [Tank](/drs/holsters/tank)
+  - [Healer](/drs/holsters/healer)
 - <a href="/drs/guides/avowed">Trinity Avowed</a>
 :::
+<br/><hr/>
+
+### Unlocking Delubrum Reginae (Savage)
+To unlock Delubrum Reginae (Savage) you must,
+1. Clear Delubrum Reginae (Normal) and complete the "Fit for a Queen" quest.
+2. Reach resistance rank 15 or higher.
+3. Obtained at least 700,000 mettle from exploring in Bozja instances.
+4. Talk to the Troubled Gentleman in the back of Gangos (Gangos (X:6.6 Y:5.0)), he's back behind the forge where Gerlot is and stands next to the Wandering Dramaturge.
+
+### Lost Actions
+The use of Lost Actions is **REQUIRED** in Delubrum Reginae (Savage) to resolve mechanics and meet DPS checks. If you don't know how to use your Lost Actions, all damage lost actions (Fonts/Banners) 
+are used together every 2 minutes, and each page has explanations on how to use the various support actions for each role. Ensure you are comfortable using actions both in combat and outside it.
+
+If you are unfamiliar with the lost action system, please spend sometime in either the Southern Front, Delubrum (Normal), or Zadnor to further accquaint yourself with it. It is paramount to have a base understanding
+to help you and your fellow raid members have a smoother experience. But do not be afraid to ask questions! The only bad question is the one that goes unasked.
+
+### Pure Essences
+Pure Essences are the bare minimum to survive raidwides in Delubrum Reginae (Savage). These special essences also alter some actions' effects. If you do not have a Pure Essence active, 
+you are last priority for being raised and may be left dead. These can be easily obtained for 1 Bozjan Cluster each.
+
+Pure Essence of the Gambler does not count as a valid pure essence to use while participating in Delubrum Reginae (Savage) groups unless you are given
+explicit permission by the host to do so. The effects of the other pure essences vastly outweigh any potential gains you might see from Gambler. In the same vain, you lose
+any raw defensive buffs you get from them too. Making you very suspectible to dying without extra holster space being attributed to you.
+
+### Resurrection Restricted
+Inside Delubrum Reginae (Savage), there are a very limited number of ways to raise the dead. To help with this, 
+all players should have a Resistance Reraiser active and should play to resolve mechanics first and foremost. The only ways to be raised are 
+Resistance Reraisers, Lost Arise (a 15% chance per cast), Healer LB3 (from Dynamis Dice or a healer proper), and Lost Sacrifice which will kill the user. Unless the Lost Sacrifice user is a tank running
+**Pure Essence** where instead they have a 50% chance to be killed.
+
+### Stats, Gearing, and Materia
+Upon entering Delubrum (or any Bozja zone for that matter), everyone's item level is set to 430 regardless of the currently equipped gear. This means you could come in wearing level 1 (one) items or wearing top of the line current savage best in slot! 
+Whatever it may be, you **must** have something equipped in every available slot for your current job to recieve the maximum amount of stats.
+
+Food and Tinctures work in all Save the Queen zones too! The most common suggestion is using **Smoked Chicken** as an easy to obtain choice, but any current tier raid food works just fine too! Similarly, 
+tinctures above **Grade 5** work the best for all your burst windows. You are using tinctures, right? 
+
+Materia is fully disabled in all Save the Queen zones (Bozja, Delubrum, and Zadnor) regardless of item level or the affixed materia's grade. All stats in Bozja are predetermined based on a class/job basis.
+Some jobs may share stats while others within the same role might have slight variations.
+
+### Holster space
+Most of these holsters are made with **Rank 18 players with 86 holster capacity in mind**. If you are under that, you can quickly level to 18 to unlock the 
+actions and holster space or use alternative actions. Additionally, please ensure you've completed "Let Me Holster That For You", a quest in Gangos that 
+increases holster capacity by 10. For experienced players, consider using one of my advanced holsters (linked at the top of each tab) instead.
+
+To quickly finish "Let Me Holster That For You", you can visit the marketboards. Majority of the time the Garlean Synethic Fibers are dirt cheap and go for maybe a few hundreds of gil at a time.
+
+### Preparation
+To ensure you have enough of your required actions and essences, you should have enough 
+actions to make three of your holster in your Lost Finds Cache. Consider using the Save/Load feature in the Lost Finds Cache to save copies of your at-box and full holsters before the run. Finally, 
+have extra Pure Essences and Resistance Reraisers in case of multiple Slimes/Golems wipes.
 
 <Footer/>
