--- a/src/content/docs/drs/guides/slimes.mdx
+++ b/src/content/docs/drs/guides/slimes.mdx
@@ -33,9 +33,13 @@ and avoid the orange landmines and purple poison traps on the ground.
 **Healers** keep tanks alive and bring the last Viscous Clot to their room for their tank.
 
 **DPS** kill red Sanguine Clots in their assigned rooms. Or killing the Bozjan Soldiers that spawn at the North and South ends of the center hallway.
+
+Once all four rooms have a large green slime casting Rupture on their pads, everyone will be directed to run towards the North Eastern corner of the map. This is the safest spot to be as you will not be hit by any of the Rupture casts.
+Before you leave, please make sure to pick up any and all aggro on the remaining slimes and bozjan soliders. Forgetting either could cause a rogue fusion or a solider knocking a slime off a pad.
+
+You will know you've successfully cleared slimes when the remaining green and red slimes begin to despawn leaving just the soliders.
 <br/><hr/>
 
-#### Where to Stand
 <Image
     src="/drs/maps/slime-stand-here.png"
     width="550"
