--- a/src/content/docs/drs/overview.mdx
+++ b/src/content/docs/drs/overview.mdx
@@ -23,7 +23,7 @@ Inside you will face off against 4 enraging bosses with some simpler fights betw
 You will be expected to be using Lost Actions and Pure Essences as they are vital to clearing
 the raid. Not bringing the proper actions, essences, and reraisers will often result in you being removed from the current run.
 
-:::note[Reccomended Studying]
+:::note[Recommended Studying]
 If you are short on time, these pages contain the most important information to read and understand.
 - <a href="/drs/actions">Lost Action Basics</a>
 - Holster for your choice of role(s).
