--- a/src/content/docs/others/discords.mdx
+++ b/src/content/docs/others/discords.mdx
@@ -14,7 +14,7 @@ import Footer from "@components/Footer.astro";
 <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.15.1/cdn/shoelace-autoloader.js"></script>
 
 ### Primal ###
-    - <a href="https://discord.gg/foexiv" target="_blank">Field Ops Enjoyers [NA]</a> - All Forays
+    - <a href="https://discord.gg/foexiv" target="_blank">Field Ops Enjoyers</a> - All Forays
     - <a href="https://discord.gg/thehelplines" target="_blank">The Help Lines</a> - BA focused, sometimes runs DRS
 
 ### Crystal ###
